# bevy-game-demo

./: .cursorignore  .cursorrules  .gitignore  Cargo.toml  README.md  color_scheme.md  index.html
.cargo/: config.toml
.cursorrules/: bevy.json  project.json  rust.json
assets/shaders/: winter_menu_bg.wgsl
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: main.rs
src/components/: bear_model.rs  boost.rs  cube.rs  duck_model.rs  duck_score.rs  enemy.rs  menu.rs  mod.rs  player.rs  powerup.rs  score.rs  shape.rs  ui.rs
src/plugins/: cube_demo.rs  game.rs  menu.rs  mod.rs  settings.rs
src/resources/: mod.rs  shader.rs  winter_bg.rs
src/states/: mod.rs
src/styles/: menu.rs  mod.rs
src/systems/: boost.rs  camera.rs  cube.rs  enemy.rs  enemy_falling.rs  enemy_movement.rs  enemy_spawning.rs  gameover.rs  menu.rs  mod.rs  pause.rs  player.rs  powerup.rs  score.rs  ui.rs  win.rs
