[package]
name = "bevy-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12", features = ["wayland"] }
wasm-bindgen = "0.2"
uuid = { version = "1.0", features = ["js"] }

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable optimizations for release builds
[profile.release]
opt-level = 3

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
console_error_panic_hook = "0.1" 