[package]
name = "bevy-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking", "wayland"] }
bevy_rapier3d = "0.23.0"
rand = "0.8"
wasm-bindgen = "0.2"
uuid = { version = "1.0", features = ["js"] }

# Enable max optimizations for dependencies, but not for our code:
[profile.dev]
opt-level = 1      # Enable light optimizations
incremental = true # Enable incremental compilation

# Enable faster builds of dependencies
[profile.dev.package."*"]
opt-level = 3

# Optimize release builds
[profile.release]
opt-level = 3
lto = "thin"       # Enable link-time optimization

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
console_error_panic_hook = "0.1" 